--- a/src/RainWPF/Controls/SideMenu.xaml
+++ b/src/RainWPF/Controls/SideMenu.xaml
@@ -13,7 +13,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Theme/Theme.xaml" />
+                <ResourceDictionary Source="../Themes/Theme.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style x:Key="MenuIconStyle" TargetType="{x:Type ToggleButton}">
                 <Setter Property="Width" Value="50" />
