--- a/src/RainWPF/Themes/Generic.xaml
+++ b/src/RainWPF/Themes/Generic.xaml
@@ -1,66 +1,30 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RainWPF.Controls">
-
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
         <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
     </ResourceDictionary.MergedDictionaries>
-
     <Style TargetType="{x:Type local:Window}">
-        <Setter Property="Background" Value="AliceBlue" />
+
+        <Setter Property="NonClientAreaHeight" Value="50" />
         <Setter Property="NonClientAreaContent">
             <Setter.Value>
-                <Grid Height="{Binding NonClientAreaHeight, RelativeSource={RelativeSource AncestorType={x:Type local:Window}}}">
+                <Grid Height="{Binding NonClientAreaHeight, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type local:Window}}}">
                     <hc:SearchBar
                         MinWidth="300"
                         Margin="5"
                         HorizontalAlignment="Center"
-                        hc:InfoElement.Placeholder="{Binding SearchPlaceholder}"
+                        hc:InfoElement.Placeholder="{Binding SearchPlaceholder, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type local:Window}}}"
                         hc:InfoElement.ShowClearButton="False"
-                        Command="{Binding SearchCommand}"
-                        Style="{StaticResource SearchBarPlus}"
-                        Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}">
-                        <hc:SearchBar.InputBindings>
-                            <KeyBinding Key="Return" Command="{Binding SearchCommand}" />
-                        </hc:SearchBar.InputBindings>
-                    </hc:SearchBar>
-
-                    <Button
-                        Margin="8"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Command="{Binding ShowLoginDialogCommand}"
-                        Content="Login"
-                        Cursor="Hand"
-                        FontSize="14"
-                        Style="{StaticResource ButtonCustom}"
-                        Visibility="{Binding CurrentUser.IsLoggedIn, Converter={StaticResource Boolean2VisibilityReConverter}}" />
-                    <Button
-                        x:Name="btnUSer"
-                        Width="40"
-                        Height="40"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Visibility="{Binding CurrentUser.IsLoggedIn, Converter={StaticResource Boolean2VisibilityConverter}}">
-                        <Button.Template>
-                            <ControlTemplate>
-                                <!--<hc:Gravatar
-                                      Width="30"
-                                      Height="30"
-                                      Cursor="Hand"
-                                      Source="/Assets/Images/engineer.png"
-                                      Style="{StaticResource GravatarCircle}" />-->
-                            </ControlTemplate>
-                        </Button.Template>
-                        <Button.ContextMenu>
-                            <ContextMenu x:Name="contextMenu" Width="200" />
-                        </Button.ContextMenu>
-                    </Button>
+                        Command="{Binding SearchCommnad, RelativeSource={RelativeSource AncestorType={x:Type local:Window}}}"
+                        CommandParameter="{Binding Text, RelativeSource={RelativeSource Self}}"
+                        Style="{StaticResource SearchBarPlus}" />
+                    <ContentPresenter Content="{Binding TopRightAreaContent, RelativeSource={RelativeSource AncestorType=local:Window}}" WindowChrome.IsHitTestVisibleInChrome="True" />
                 </Grid>
-
             </Setter.Value>
         </Setter>
     </Style>
