--- a/src/RainWPFDemo/MainWindow.xaml
+++ b/src/RainWPFDemo/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="RainWPFDemo.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RainWPFDemo"
@@ -10,23 +11,96 @@
     Title="MainWindow"
     Width="800"
     Height="450"
-    NonClientAreaHeight="50"
-    SearchString="{Binding SearchString}"
+    NonClientAreaBackground="Gray"
+    NonClientAreaHeight="100"
+    SearchCommnad="{Binding Serach1Command}"
+    SearchPlaceholder="{Binding SearchString2}"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
+
+    <rfc:Window.Resources>
+        <SolidColorBrush x:Key="ListViewBackground">#F1F7F9</SolidColorBrush>
+        <SolidColorBrush x:Key="BackgroundColor1">#B9CED9</SolidColorBrush>
+        <SolidColorBrush x:Key="SelectedColor">#5CACEE</SolidColorBrush>
+        <SolidColorBrush x:Key="StatusColor">#008000</SolidColorBrush>
+
+    </rfc:Window.Resources>
+
 
     <rfc:Window.DataContext>
         <local:MainVM />
     </rfc:Window.DataContext>
+
+    <rfc:Window.TopRightAreaContent>
+        <hc:SimplePanel>
+            <Button
+                x:Name="user_info"
+                Style="{StaticResource ButtonLogin}"
+                Visibility="{Binding Logined, Converter={StaticResource Boolean2VisibilityConverter}}">
+                <Image
+                    Width="34"
+                    Height="34"
+                    Cursor="Hand"
+                    Source="./Assets/Images/engineer.png">
+                    <Image.Clip>
+                        <EllipseGeometry
+                            Center="16,16"
+                            RadiusX="15"
+                            RadiusY="15" />
+                    </Image.Clip>
+                </Image>
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="Click" SourceObject="{Binding ElementName=user_info}">
+                        <b:ChangePropertyAction
+                            PropertyName="IsOpen"
+                            TargetObject="{Binding ElementName=user_popup}"
+                            Value="True" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </Button>
+
+            <Button
+                Command="{Binding LoginCommand}"
+                Content="Login"
+                Style="{StaticResource ButtonLogin}"
+                Visibility="{Binding Logined, Converter={StaticResource Boolean2VisibilityReConverter}}" />
+
+            <Popup
+                x:Name="user_popup"
+                PlacementTarget="{Binding ElementName=user_info}"
+                StaysOpen="False">
+                <Grid
+                    Width="100"
+                    Height="100"
+                    Background="Red" />
+            </Popup>
+        </hc:SimplePanel>
+    </rfc:Window.TopRightAreaContent>
 
     <StackPanel>
 
         <TextBlock
             Width="100"
             Height="100"
-            Text="{Binding SearchString}" />
+            Text="{Binding SearchString2}" />
 
         <Button Command="{Binding UpdateSearchStringCommand}" Content="click" />
 
-    </StackPanel>
+        <Image
+            Width="40"
+            Height="40"
+            Margin="10"
+            Cursor="Hand"
+            Source="../Resources/Images/engineer.png" />
 
+
+        <rfc:SideMenu
+            Grid.Row="1"
+            Grid.Column="0"
+            Background="{StaticResource ListViewBackground}"
+            MenuItems="{Binding Menus}"
+            MouseOverItemColor="{StaticResource ListViewBackground}"
+            SelectItemColor="{StaticResource BackgroundColor1}"
+            SelectedMenu="{Binding CurrentMenu}" />
+    </StackPanel>
 </rfc:Window>
