--- a/src/Demo/App.xaml
+++ b/src/Demo/App.xaml
@@ -1,15 +1,19 @@
 ﻿<Application
-    x:Class="RainWPFDemo.App"
+    x:Class="Demo.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:RainWPFDemo"
-    StartupUri="MainWinodw.xaml">
+    xmlns:local="clr-namespace:Demo"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            <FontFamily x:Key="Icon">Assest/Fonts/#iconfont</FontFamily>
+            <SolidColorBrush x:Key="ListViewBackground">#F1F7F9</SolidColorBrush>
+            <SolidColorBrush x:Key="BackgroundColor1">#B9CED9</SolidColorBrush>
+            <SolidColorBrush x:Key="SelectedColor">#5CACEE</SolidColorBrush>
+            <SolidColorBrush x:Key="StatusColor">#008000</SolidColorBrush>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/RainWPF;component/Themes/Theme.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <FontFamily x:Key="Icons">Assets/#iconfont</FontFamily>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
