--- a/src/RainWPF/Controls/UserControls/SideMenu.xaml
+++ b/src/RainWPF/Controls/UserControls/SideMenu.xaml
@@ -106,7 +106,7 @@
                         <TextBlock
                             Grid.Column="0"
                             VerticalAlignment="Center"
-                            FontFamily="{Binding MenuIconFontFamity, ElementName=sideMenu}"
+                            FontFamily="{Binding MenuIconFontFamity, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
                             FontSize="24"
                             Text="{Binding MenuMeta.DefaultIcon}" />
                         <TextBlock
