--- a/src/RainWPF/Themes/Theme.xaml
+++ b/src/RainWPF/Themes/Theme.xaml
@@ -2,7 +2,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Converters="clr-namespace:RainWPF.Converters"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RainWPF.Controls">
 
     <ResourceDictionary.MergedDictionaries>
@@ -43,12 +42,12 @@
     <Style
         x:Key="ButtonLogin"
         BasedOn="{StaticResource ButtonCustom}"
-        TargetType="Button">
+        TargetType="{x:Type Button}">
         <Setter Property="Margin" Value="7" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="VerticalAlignment" Value="Top" />
-        <Setter Property="FontSize" Value="12" />
+        <Setter Property="FontSize" Value="14" />
         <Setter Property="Cursor" Value="Hand" />
     </Style>
 
@@ -128,12 +127,11 @@
         </Style.Triggers>
     </Style>
 
-    <Style
-        x:Key="ListBoxMenuBox"
-        BasedOn="{StaticResource ListBoxCustom}"
-        TargetType="{x:Type ListBox}">
+    <Style x:Key="ListBoxMenuBox" TargetType="{x:Type ListBox}">
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxMenuBoxItem}" />
     </Style>
