--- a/src/Demo/MainWindow.xaml
+++ b/src/Demo/MainWindow.xaml
@@ -2,9 +2,7 @@
     x:Class="Demo.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:Demo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:rf="https://rainwpf.github.io/rainwpf"
@@ -23,7 +21,6 @@
         <local:MainVM />
     </rf:Window.DataContext>
 
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -36,7 +33,15 @@
             MenuIconFontFamity="{StaticResource Icon}"
             MenuItems="{Binding Menus}"
             MouseOverItemColor="CadetBlue"
-            SelectItemColor="Gray" />
-    </Grid>
+            SelectItemColor="Gray"
+            SelectedMenu="{Binding CurrentMenu}" />
 
+        <Frame
+            Grid.Column="1"
+            Margin="5"
+            BorderBrush="Transparent"
+            BorderThickness="0"
+            NavigationUIVisibility="Hidden"
+            Source="{Binding CurrentPage}" />
+    </Grid>
 </rf:Window>
