--- a/src/RainWPF/Controls/UserControls/SideMenu.xaml
+++ b/src/RainWPF/Controls/UserControls/SideMenu.xaml
@@ -114,7 +114,7 @@
                             Margin="10,0,0,0"
                             VerticalAlignment="Center"
                             FontSize="15"
-                            Text="{Binding CNName}" />
+                            Text="{Binding Name}" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
