--- a/src/Demo/Pages/Home.xaml
+++ b/src/Demo/Pages/Home.xaml
@@ -21,11 +21,11 @@
         <ComboBox ItemsSource="{rf:EnumBinding {x:Type eunm:Language}}" SelectedValue="{Binding Language}" />
 
         <UniformGrid Columns="2" Rows="2">
-
             <rf:PropertyViewer
                 Width="300"
                 FontSize="20"
                 PropertyName="HSMS STATE"
+                Style="{StaticResource PrimaryPropertyViewer}"
                 Value="ONLINE" />
 
             <rf:PropertyViewer
