--- a/src/RainWPF/Controls/UserControls/JogPendant.xaml
+++ b/src/RainWPF/Controls/UserControls/JogPendant.xaml
@@ -15,8 +15,47 @@
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="8*" />
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="8*"/>
+        </Grid.RowDefinitions>
 
-        <Grid Grid.Column="0">
+        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height="7*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Text="当前坐标" Style="{StaticResource TextBlockSubTitleBold}"/>
+
+            <ListBox Grid.Row="1"
+                     BorderThickness="0" 
+                     Style="{StaticResource ListBoxCustom}" 
+                     ItemsSource="{Binding AxisSource,RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid  Rows="1"/>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="10 0 0 0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition  Height="5*"/>
+                                <RowDefinition  Height="5*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Text="{Binding Name}" Style="{StaticResource TextBlockSubTitle}"/>
+                            <TextBox Margin="0 5 0 0" Grid.Row="1"  Text="{Binding Coord}" />
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+            </ListBox>
+
+        </Grid>
+
+
+        <Grid Grid.Column="0" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="8*" />
@@ -33,31 +72,34 @@
                     <DataTemplate>
                         <RadioButton
                             Margin="5"
-                            Content="{Binding}"
+                            Content="{Binding Name}"
                             GroupName="a"
                             IsChecked="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=ListBoxItem}, Mode=TwoWay}" />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-
         </Grid>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
-                <RowDefinition Height="4*" />
-                <RowDefinition Height="4*" />
+                <RowDefinition Height="8*" />
+
             </Grid.RowDefinitions>
             <TextBlock
                 Grid.Row="0"
                 Style="{StaticResource TextBlockSubTitleBold}"
                 Text="控制" />
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*" />
-                    <ColumnDefinition Width="5*" />
-                </Grid.ColumnDefinitions>
-                <RepeatButton
+            <StackPanel
+                Grid.Row="1"                
+                Orientation="Vertical">
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*" />
+                        <ColumnDefinition Width="5*" />
+                    </Grid.ColumnDefinitions>
+                    <RepeatButton
                     Grid.Column="0"
                     Width="100"
                     Height="50"
@@ -65,20 +107,15 @@
                     Command="{Binding MoveToLeftCommand, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
                     FontSize="40"
                     Style="{StaticResource RepeatButtonPrimary}" />
-                <RepeatButton
+                    <RepeatButton
                     Grid.Column="1"
                     Width="100"
                     Height="50"
                     hc:IconElement.Geometry="{StaticResource RightGeometry}"
                     Command="{Binding MoveToRightCommand, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
                     Style="{StaticResource RepeatButtonPrimary}" />
-            </Grid>
-
-            <StackPanel
-                Grid.Row="2"
-                Margin="10,20,0,0"
-                Orientation="Vertical">
-                <Slider Maximum="100" Value="{Binding Speed, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}" />
+                </Grid>
+                <Slider Margin="0 20 0 0" Maximum="100" Value="{Binding Speed, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}" />
                 <TextBlock Style="{StaticResource TextBlockSubTitle}" Text="{Binding Speed, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}, StringFormat={}速度：{0:F3}%}" />
             </StackPanel>
         </Grid>
