--- a/src/RainWPF/Controls/UserControls/JogPendant.xaml
+++ b/src/RainWPF/Controls/UserControls/JogPendant.xaml
@@ -103,20 +103,22 @@
                         <ColumnDefinition Width="5*" />
                     </Grid.ColumnDefinitions>
                     <RepeatButton
-                    Grid.Column="0"
-                    Width="100"
-                    Height="50"
-                    hc:IconElement.Geometry="{StaticResource LeftGeometry}"
-                    Command="{Binding MoveToLeftCommand, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
-                    FontSize="40"
-                    Style="{StaticResource RepeatButtonPrimary}" />
+                        Grid.Column="0"
+                        Width="100"
+                        Interval="{Binding CommandInterval,RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
+                        Height="50"
+                        hc:IconElement.Geometry="{StaticResource LeftGeometry}"
+                        Command="{Binding MoveToLeftCommand, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
+                        FontSize="40"
+                        Style="{StaticResource RepeatButtonPrimary}" />
                     <RepeatButton
-                    Grid.Column="1"
-                    Width="100"
-                    Height="50"
-                    hc:IconElement.Geometry="{StaticResource RightGeometry}"
-                    Command="{Binding MoveToRightCommand, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
-                    Style="{StaticResource RepeatButtonPrimary}" />
+                        Grid.Column="1"
+                        Interval="{Binding CommandInterval,RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
+                        Width="100"
+                        Height="50"
+                        hc:IconElement.Geometry="{StaticResource RightGeometry}"
+                        Command="{Binding MoveToRightCommand, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"
+                        Style="{StaticResource RepeatButtonPrimary}" />
                 </Grid>
                 <Slider Margin="0 20 0 0" Maximum="100" Value="{Binding Speed, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}" />
                 <TextBlock  Style="{StaticResource TextBlockSubTitle}" Text="{Binding Speed, RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}, StringFormat={}速度：{0:F3}%}" />
