--- a/src/Demo/Pages/Home.xaml
+++ b/src/Demo/Pages/Home.xaml
@@ -54,6 +54,7 @@
         <rf:JogPendant
             Width="500"
             Height="450"
+            CommandInterval="1000"
             AxisSource="{Binding Axias}"
             MoveToLeftCommand="{Binding MoveToLeftCommand}"
             SelectedAxis="{Binding SelectAxis}" />
