--- a/src/RainWPF/Controls/UserControls/JogPendant.xaml
+++ b/src/RainWPF/Controls/UserControls/JogPendant.xaml
@@ -20,43 +20,12 @@
             <RowDefinition Height="8*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="3*"/>
-                <RowDefinition Height="7*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="当前坐标" Style="{StaticResource TextBlockSubTitleBold}"/>
-
-            <ListBox Grid.Row="1"
-                     BorderThickness="0" 
-                     Style="{StaticResource ListBoxCustom}" 
-                     ItemsSource="{Binding AxisSource,RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}">
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <UniformGrid  Rows="1"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="10 0 0 0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition  Height="5*"/>
-                                <RowDefinition  Height="5*"/>
-                            </Grid.RowDefinitions>
-                            <TextBlock Grid.Row="0" Text="{Binding Name}" Style="{StaticResource TextBlockSubTitle}"/>
-                            <TextBox  IsReadOnly="True" 
-                                      Margin="0 5 0 0" 
-                                      Grid.Row="1"  
-                                      Text="{Binding Coord,StringFormat={}{0:F3} ,Mode=OneWay}" />
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-
-            </ListBox>
-
-        </Grid>
-
+        <local:AxisPostionInput Grid.Row="0" 
+                                Grid.Column="0" 
+                                Grid.ColumnSpan="2"
+                                Title="当前坐标"
+                                IsReadOnly="True"
+                                AxisSource="{Binding AxisSource,RelativeSource={RelativeSource AncestorType={x:Type local:JogPendant}}}"/>
 
         <Grid Grid.Column="0" Grid.Row="1">
             <Grid.RowDefinitions>
