--- a/src/RainWPF/Themes/Generic.xaml
+++ b/src/RainWPF/Themes/Generic.xaml
@@ -2,13 +2,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:cc="clr-namespace:RainWPF.Controls.CustomControls"
+    xmlns:cv="clr-namespace:RainWPF.Converters"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:RainWPF.Controls"
     xmlns:uc="clr-namespace:RainWPF.Controls.UserControls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
         <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+
     </ResourceDictionary.MergedDictionaries>
+
+    <cv:Status2ColorConverter x:Key="Status2ColorConverter" />
 
     <Style TargetType="{x:Type local:Window}">
         <Setter Property="NonClientAreaHeight" Value="50" />
@@ -35,5 +40,32 @@
                 </Grid>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type cc:Sensor}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type cc:Sensor}">
+                    <Ellipse
+                        Width="{TemplateBinding Width}"
+                        Height="{TemplateBinding Height}"
+                        Fill="{TemplateBinding Background}"
+                        Stroke="Gray"
+                        StrokeThickness="1" />
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter Property="Background" Value="Red" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter Property="Background" Value="Green" />
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+
     </Style>
 </ResourceDictionary>
